--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hospital</title>
     <link rel="stylesheet" href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/css/main.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/index.html">Hospital</a></li>
+            <li><a href="/doctors">Doctors</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
+            <li><a href="/login" class="btn btn-login">Login</a></li>
+            <li><a href="/register" class="btn btn-register">Register</a></li>
+        </ul>
+    </nav>
     <div class="jumbotron">
         <h2>Welcome to Hospital</h2>
         <p class="lead">Where Care Comes First</p>
-        <a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a>
+        <a href="#" class="btn btn-primary btn-large">Learn more »</a>
     </div>
 
     <div class="row">
@@ -16,21 +28,21 @@
             <img src="media/12354.png" alt="Find Doctors">
             <h2>Find Doctors</h2>
             <p>Get the best in health care with the help of our highly qualified doctors. Click the button below to get started.</p>
-            <a class="btn btn-default" href="#">Find Doctors &raquo;</a>
+            <a class="btn btn-default" href="#">Find Doctors »</a>
         </div>
 
         <div class="col-md-4">
             <img src="media/1339788964763703.jpg" alt="Create Appointments">
             <h2>Create Appointments</h2>
             <p>Setting up appointments has never been so easy. It's just a registration and few clicks away.</p>
-            <a class="btn btn-default" href="#">Create now &raquo;</a>
+            <a class="btn btn-default" href="#">Create now »</a>
         </div>
 
         <div class="col-md-4">
             <img src="media/1hospital.jpg" alt="View Statistics">
             <h2>View Statistics</h2>
             <p>Want to know how well we are doing? Check it out yourself.</p>
-            <a class="btn btn-default" href="#">Show Statistics &raquo;</a>
+            <a class="btn btn-default" href="#">Show Statistics »</a>
         </div>
     </div>
 </body>
