--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
         <ul>
             <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/index.html">Hospital</a></li>
-            <li><a href="/doctors">Doctors</a></li>
+            <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Doctor/DocIndex.html">Doctors</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
             <li><a href="/login" class="btn btn-login">Login</a></li>
@@ -25,25 +25,26 @@
 
     <div class="row">
         <div class="col-md-4">
-            <img src="media/12354.png" alt="Find Doctors">
+            <img src="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/img/finddoctors.png" alt="Find Doctors">
             <h2>Find Doctors</h2>
             <p>Get the best in health care with the help of our highly qualified doctors. Click the button below to get started.</p>
             <a class="btn btn-default" href="#">Find Doctors »</a>
         </div>
 
         <div class="col-md-4">
-            <img src="media/1339788964763703.jpg" alt="Create Appointments">
+            <img src="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/img/appointment.png" alt="Create Appointments">
             <h2>Create Appointments</h2>
-            <p>Setting up appointments has never been so easy. It's just a registration and few clicks away.</p>
-            <a class="btn btn-default" href="#">Create now »</a>
+            <p>Get started! Your appointment is just a few clicks away.</p>
+            <a class="btn btn-default" href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Doctor/Appointment/AppointmentIndex.html">Create now »</a>
         </div>
 
         <div class="col-md-4">
-            <img src="media/1hospital.jpg" alt="View Statistics">
+            <img src="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/img/statistics.png" alt="View Statistics">
             <h2>View Statistics</h2>
             <p>Want to know how well we are doing? Check it out yourself.</p>
             <a class="btn btn-default" href="#">Show Statistics »</a>
         </div>
     </div>
+    
 </body>
 </html>
