--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Hospital Page</title>
+    <title>Welcome to HealHive</title>
     <link rel="stylesheet" href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/css/main.css">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/index.html">Hospital</a></li>
+            <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/index.html">Home</a></li>
             <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Doctor/DocIndex.html">Doctors</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
-            <li><a href="/login" class="btn btn-login">Login</a></li>
-            <li><a href="/register" class="btn btn-register">Register</a></li>
+            <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Account/Login.html" class="btn btn-login">Login</a></li>
+            <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Account/Register.html" class="btn btn-register">Register</a></li>
         </ul>
     </nav>
     <div class="jumbotron">
-        <h2>Welcome to Hospital</h2>
+        <h2>Welcome to HealHive</h2>
         <p class="lead">Where Care Comes First</p>
         <a href="#" class="btn btn-primary btn-large">Learn more »</a>
     </div>
@@ -28,7 +28,7 @@
             <img src="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/img/finddoctors.png" alt="Find Doctors">
             <h2>Find Doctors</h2>
             <p>Get the best in health care with the help of our highly qualified doctors. Click the button below to get started.</p>
-            <a class="btn btn-default" href="#">Find Doctors »</a>
+            <a class="btn btn-default" href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Doctor/docindex.html">Find Doctors »</a>
         </div>
 
         <div class="col-md-4">
