--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to HealHive</title>
-    <link rel="stylesheet" href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/index.html">Home</a></li>
-            <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Doctor/DocIndex.html">Doctors</a></li>
+            <li><img src="img/logo.png"></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Views/Doctor/docindex.html">Doctors</a></li>
             <li><a href="/about">About</a></li>
-            <li><a href="/contact">Contact</a></li>
-            <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Account/Login.html" class="btn btn-login">Login</a></li>
-            <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Account/Register.html" class="btn btn-register">Register</a></li>
+            <li><a href="Views/Account/Login.html" class="btn btn-login">Login</a></li>
+            <li><a href="Views/Account/Register.html" class="btn btn-register">Register</a></li>
         </ul>
     </nav>
     <div class="jumbotron">
@@ -25,26 +25,44 @@
 
     <div class="row">
         <div class="col-md-4">
-            <img src="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/img/finddoctors.png" alt="Find Doctors">
+            <img src="img/finddoctors.png" alt="Find Doctors">
             <h2>Find Doctors</h2>
             <p>Get the best in health care with the help of our highly qualified doctors. Click the button below to get started.</p>
-            <a class="btn btn-default" href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Doctor/docindex.html">Find Doctors »</a>
+            <a class="btn btn-default" href="Views/Doctor/docindex.html">Find Doctors »</a>
         </div>
 
         <div class="col-md-4">
-            <img src="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/img/appointment.png" alt="Create Appointments">
+            <img src="img/appointment.png" alt="Create Appointments">
             <h2>Create Appointments</h2>
             <p>Get started! Your appointment is just a few clicks away.</p>
-            <a class="btn btn-default" href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Appointment/AppointmentIndex.html">Create now »</a>
+            <a class="btn btn-default" href="Views/Appointment/AppointmentIndex.html">Create now »</a>
         </div>
 
         <div class="col-md-4">
-            <img src="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/img/statistics.png" alt="View Statistics">
+            <img src="img/statistics.png" alt="View Statistics">
             <h2>View Statistics</h2>
             <p>Want to know how well we are doing? Check it out yourself.</p>
             <a class="btn btn-default" href="#">Show Statistics »</a>
         </div>
     </div>
-    
+    <br><br><br><br><br>
 </body>
+<footer>
+    <div class="footer-container">
+            <div class="footer-section">
+                <h4>Contact Us</h4>
+                <p>Email: support@docappointments.com</p>
+                <p>Phone: +1 234 567 8900</p>
+                <p>Address: 123 Health St, Wellness City</p>
+            </div>
+            <div class="footer-section">
+                <h4>Follow Us</h4>
+                <div class="social-links">
+                   <p><a href="https://facebook.com">Facebook</a></pr>
+                   <p><a href="https://twitter.com">Twitter</a></p>
+                    <p><a href="https://instagram.com">Instagram</a></p>
+                </div>
+            </div>
+    </div>
+</footer>
 </html>
