--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             <li><img src="img/logo.png"></li>
             <li><a href="index.html">Home</a></li>
             <li><a href="Views/Doctor/docindex.html">Doctors</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact Us</a></li>
             <li><a href="Views/Account/Login.html" class="btn btn-login">Login</a></li>
             <li><a href="Views/Account/Register.html" class="btn btn-register">Register</a></li>
         </ul>
@@ -42,7 +43,7 @@
             <img src="img/statistics.png" alt="View Statistics">
             <h2>View Statistics</h2>
             <p>Want to know how well we are doing? Check it out yourself.</p>
-            <a class="btn btn-default" href="#">Show Statistics »</a>
+            <a class="btn btn-default" href="Views/Statistics/ViewStatistics.html">Show Statistics »</a>
         </div>
     </div>
     <br><br><br><br><br>
