--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to HealHive</title>
+    <link rel="icon" type="image/x-icon" href="../../img/logo.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -13,7 +15,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="Views/Doctor/docindex.html">Doctors</a></li>
             <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="#contact-section">Contact Us</a></li>
             <li><a href="Views/Account/Login.html" class="btn btn-login">Login</a></li>
             <li><a href="Views/Account/Register.html" class="btn btn-register">Register</a></li>
         </ul>
@@ -21,7 +23,7 @@
     <div class="jumbotron">
         <h2>Welcome to HealHive</h2>
         <p class="lead">Where Care Comes First</p>
-        <a href="#" class="btn btn-primary btn-large">Learn more »</a>
+        <a href="#contact-section" class="btn btn-primary btn-large">Learn more »</a>
     </div>
 
     <div class="row">
@@ -33,7 +35,7 @@
         </div>
 
         <div class="col-md-4">
-            <img src="img/appointment.png" alt="Create Appointments">
+            <img src="img/appointment.jpeg" alt="Create Appointments">
             <h2>Create Appointments</h2>
             <p>Get started! Your appointment is just a few clicks away.</p>
             <a class="btn btn-default" href="Views/Appointment/AppointmentIndex.html">Create now »</a>
@@ -49,21 +51,43 @@
     <br><br><br><br><br>
 </body>
 <footer>
-    <div class="footer-container">
-            <div class="footer-section">
-                <h4>Contact Us</h4>
-                <p>Email: support@docappointments.com</p>
-                <p>Phone: +1 234 567 8900</p>
-                <p>Address: 123 Health St, Wellness City</p>
-            </div>
-            <div class="footer-section">
-                <h4>Follow Us</h4>
-                <div class="social-links">
-                   <p><a href="https://facebook.com">Facebook</a></pr>
-                   <p><a href="https://twitter.com">Twitter</a></p>
-                    <p><a href="https://instagram.com">Instagram</a></p>
+    <main>
+        <div id="contact-section" class="contact-container">
+            <form id="contactForm" class="contact-section">
+                <h2>Contact Us</h2>
+                <form id="contactForm">
+                    <div class="form-group">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message:</label>
+                        <textarea id="message" name="message" rows="4" required></textarea>
+                    </div>
+                    <button type="submit">Send Message</button>
+                </form>
+            </form>
+            <div class="contact-details">
+                <div class="footer-section">
+                    <h4>Contact Us</h4>
+                    <p>Email: support@docappointments.com</p>
+                    <p>Phone: +1 234 567 8900</p>
+                    <p>Address: 123 Health St, Wellness City</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Follow Us</h4>
+                    <div class="social-links">
+                        <a href="https://facebook.com" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com" class="social-icon"><i class="fab fa-twitter"></i></a>
+                        <a href="https://instagram.com" class="social-icon"><i class="fab fa-instagram"></i></a>
+                    </div>
                 </div>
             </div>
-    </div>
+        </div>
+    </main>
 </footer>
 </html>
