--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><img src="img/logo.png"></li>
             <li><a href="index.html">Home</a></li>
             <li><a href="Views/Doctor/docindex.html">Doctors</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="Views/Home/About.html">About Us</a></li>
             <li><a href="#contact-section">Contact Us</a></li>
             <li><a href="Views/Account/Login.html" class="btn btn-login">Login</a></li>
             <li><a href="Views/Account/Register.html" class="btn btn-register">Register</a></li>
@@ -23,7 +23,7 @@
     <div class="jumbotron">
         <h2>Welcome to HealHive</h2>
         <p class="lead">Where Care Comes First</p>
-        <a href="#contact-section" class="btn btn-primary btn-large">Learn more »</a>
+        <a href="#contact-section" class="btn btn-primary btn-large">Learn more >></a>
     </div>
 
     <div class="row">
