--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to HealHive</title>
-    <link rel="icon" type="image/x-icon" href="../../img/logo.png">
+    <link rel="icon" type="image/x-icon" href="img/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -23,7 +23,7 @@
     <div class="jumbotron">
         <h2>Welcome to HealHive</h2>
         <p class="lead">Where Care Comes First</p>
-        <a href="#contact-section" class="btn btn-primary btn-large">Learn more >></a>
+        <a href="#contact-section" class="btn btn-primary btn-large">Learn more </a>
     </div>
 
     <div class="row">
@@ -31,21 +31,21 @@
             <img src="img/finddoctors.png" alt="Find Doctors">
             <h2>Find Doctors</h2>
             <p>Get the best in health care with the help of our highly qualified doctors. Click the button below to get started.</p>
-            <a class="btn btn-default" href="Views/Doctor/docindex.html">Find Doctors »</a>
+            <a class="btn btn-default" href="Views/Doctor/docindex.html">Find Doctors</a>
         </div>
 
         <div class="col-md-4">
             <img src="img/appointment.jpeg" alt="Create Appointments">
             <h2>Create Appointments</h2>
             <p>Get started! Your appointment is just a few clicks away.</p>
-            <a class="btn btn-default" href="Views/Appointment/AppointmentIndex.html">Create now »</a>
+            <a class="btn btn-default" href="Views/Appointment/AppointmentIndex.html">Create now /a>
         </div>
 
         <div class="col-md-4">
             <img src="img/statistics.png" alt="View Statistics">
             <h2>View Statistics</h2>
             <p>Want to know how well we are doing? Check it out yourself.</p>
-            <a class="btn btn-default" href="Views/Statistics/ViewStatistics.html">Show Statistics »</a>
+            <a class="btn btn-default" href="Views/Statistics/ViewStatistics.html">Show Statistics</a>
         </div>
     </div>
     <br><br><br><br><br>
