--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
             <img src="img/appointment.jpeg" alt="Create Appointments">
             <h2>Create Appointments</h2>
             <p>Get started! Your appointment is just a few clicks away.</p>
-            <a class="btn btn-default" href="Views/Appointment/AppointmentIndex.html">Create now /a>
+            <a class="btn btn-default" href="Views/Appointment/AppointmentIndex.html">Create now </a>
         </div>
 
         <div class="col-md-4">
             <img src="img/statistics.png" alt="View Statistics">
             <h2>View Statistics</h2>
             <p>Want to know how well we are doing? Check it out yourself.</p>
-            <a class="btn btn-default" href="Views/Statistics/ViewStatistics.html">Show Statistics</a>
+            <a class="btn btn-default" href="Views/Statistics/ViewStatistics.html">Show Statistics </a>
         </div>
     </div>
     <br><br><br><br><br>
